# Jira_TicketCreator

./: .gitignore  README.md  main.py  pyproject.toml
Jira_TicketCreator/data/chromadb/: chroma.sqlite3
Jira_TicketCreator/data/processed/: jira_issues.jsonl  stats.json
Jira_TicketCreator/scripts/: bootstrap_rag.py  peek_index.py  prepare_dataset.py  query_index.py  run_generate.py
Jira_TicketCreator/src/jira_formatter/agents/: contracts.py  orchestrator.py  product.py  qa.py  technical.py
Jira_TicketCreator/src/jira_formatter/core/: datasource.py  models.py  text_utils.py
Jira_TicketCreator/src/jira_formatter/llm/: gemini.py  prompts.py
Jira_TicketCreator/src/jira_formatter/pipelines/: generate_ticket.py
Jira_TicketCreator/src/jira_formatter/rag/: chunking.py  embeddings.py  gemini.py  indexer.py  retriever.py  vectorstore.py
Jira_Ticket_Creation/data/processed/: jira_issues.jsonl  jira_issues_min.csv
Jira_Ticket_Creation/pipeline/: generate_ticket.py
Jira_Ticket_Creation/scripts/: bootstrap_rag.py  prepare_dataset.py  run_generate.py
Jira_Ticket_Creation/src/agents/: orchestrator.py
Jira_Ticket_Creation/src/core/: datasource.py  model.py  text_utils.py
Jira_Ticket_Creation/src/llm/: gemini.py  prompts.py
Jira_Ticket_Creation/src/rag/: bm25_retriever.py  chunking.py  embeddings.py  hybrid_retriever.py  indexer.py  retriever.py  vectorstore.py
project_structure/: Create_project_scructure.py  structure.py
